; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_pflog.c_pfloginit.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_pflog.c_pfloginit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pflogif_list = common dso_local global i32 0, align 4
@PFLOGIFS_MAX = common dso_local global i32 0, align 4
@pflogifs = common dso_local global i32** null, align 8
@pflog_cloner = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pfloginit() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @LIST_INIT(i32* @pflogif_list)
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %12, %0
  %4 = load i32, i32* %1, align 4
  %5 = load i32, i32* @PFLOGIFS_MAX, align 4
  %6 = icmp slt i32 %4, %5
  br i1 %6, label %7, label %15

7:                                                ; preds = %3
  %8 = load i32**, i32*** @pflogifs, align 8
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32*, i32** %8, i64 %10
  store i32* null, i32** %11, align 8
  br label %12

12:                                               ; preds = %7
  %13 = load i32, i32* %1, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %1, align 4
  br label %3

15:                                               ; preds = %3
  %16 = call i32 @if_clone_attach(i32* @pflog_cloner)
  ret void
}

declare dso_local i32 @LIST_INIT(i32*) #1

declare dso_local i32 @if_clone_attach(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
